# Corto-Densimeter

./: README.md
Espressif/: CMakeLists.txt  log.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  test.txt
Espressif/main/: CMakeLists.txt  densimeter_main.c  hello_world_main.c
Espressif/main/Hardware/I2C/: i2c_functions.c  i2c_functions.h
Espressif/main/Hardware/LED/: led_functions.c  led_functions.h
Espressif/main/Hardware/MPU6050/: mpu6050_functions.c  mpu6050_functions.h
Espressif/main/Software/DENSIMETER/: densimeter_functions.c  densimeter_functions.h
Espressif/main/Software/PUSH/: push_functions.c  push_functions.h
GdP/: cahier_des_charges.md  suivi_materiel.ods
